--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "components": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.2",
+    "react-switch": "^7.0.0",
     "styled": "^1.0.0",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
